2014-03-09  6.8.8-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-8, SVN revision 15097.

2014-03-04  6.8.8-8 Glenn Randers-Pehrson <glennrp@image...>
  * Reset colorspace to Grayscale when reading a gray PNG image with
    gamma > 0.75 instead of when gamma==1.0 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25136).

2014-02-22  6.8.8-8 Dirk Lemstra <dirk@snakeware...>
  * The PSD reader creates a merged image if the image does not contain one.
  * Added option pdf:fit-page to scale a pdf to the specified size (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=25044).
  * The ResolutionInfo in the 8BIM profile will be updated when an image is
    written.
  * Fixed UTF8 issues and added support for reading files with long path names
    for the Windows distribution.

2014-02-21  6.8.8-8 Cristy  <quetzlzacatenango@image...>
  * Convert linear RGB to sRGB before writing the Targa image format.
  * Make sure we use the secure C library functions when compiling ImageMagick
    on Windows.
  * Tweak color reduction optimization to return a full color palette (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=25098).
  * Patch configure.ac to support FlashPix under Debian (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25140).
  * OpenCL support writes to $HOME/.config/ImageMagick, if the path does not
    exist, two calls to mkdir() are required (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25080).
  * Replace  MAGICKCORE_JP2_DELEGATE with MAGICKCORE_LIBOPENJP2_DELEGATE in
    magick/static.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25153).
  * Eliminate thread race condition (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25168).

2014-02-18  6.8.8-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-7, SVN revision 14908.
